--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,8 @@ h6 {
 	font-weight: 200;
 }
 body {
+    margin-right: 20px;
+    margin-left: 30px;
 	font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
     background-color: white;
 	padding: 35px;
