--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ h6 {
 	font-weight: 200;
 }
 body {
+    max-width: 800px;
     margin-right: 20px;
     margin-left: 30px;
 	font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
